fix spacing around interpreter on small screens

--- a/docs/src/components/Interpreter/styles.css
+++ b/docs/src/components/Interpreter/styles.css
@@ -252,7 +252,7 @@ body.full-screen .term {
         max-width: none;
         padding: 0;
     }
-    .heroBanner_src-pages-index-module {
+    .hero--primary {
         padding: 0 !important;
     }
 }
